@@ -16,8 +16,10 @@
 package com.vaadin.flow.component.trigger.internal;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
+import org.jspecify.annotations.Nullable;
 import org.junit.jupiter.api.Test;
 import tools.jackson.databind.node.ArrayNode;
 import tools.jackson.databind.node.ObjectNode;
@@ -31,71 +33,89 @@ import com.vaadin.flow.internal.nodefeature.ReturnChannelRegistration;
 import com.vaadin.tests.util.MockUI;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-class CopyTextToClipboardActionTest {
+class WriteToClipboardActionTest {
 
     @Test
-    void fireAndForget_handlerJsIsPlainWriteText() {
+    void fireAndForget_textOnly_emitsWriteWrappedInIIFEResolvingWithText() {
         UI ui = new MockUI();
         TagComponent button = new TagComponent("button");
         TagComponent field = new TagComponent("input");
         ui.getElement().appendChild(button.getElement(), field.getElement());
 
         new DomEventTrigger(button, "click")
-                .triggers(new CopyTextToClipboardAction(
-                        new PropertyInput<>(field, "value", String.class)));
+                .triggers(new WriteToClipboardAction(
+                        new PropertyInput<>(field, "value", String.class),
+                        null));
 
         ui.getInternals().getStateTree().runExecutionsBeforeClientResponse();
 
-        // Fire-and-forget uses the simple writeText call — no IIFE wrap
-        // because the resolved value isn't needed.
+        // IIFE binds the text expression once, calls write([ClipboardItem
+        // ({"text/plain": t})]), then resolves with the same t so onCopied
+        // (if wired) sees the exact value.
         assertEquals(
-                "((v) => navigator.clipboard.writeText(v).then(() => v))($0[\"value\"]);",
+                "((t) => navigator.clipboard.write([new ClipboardItem({\"text/plain\":t})]).then(() => t))($0[\"value\"]);",
                 handlerOf(singleInstallFn(ui)).getBody());
     }
 
     @Test
-    void fireAndForget_literalInput_encodesValueAsJsonLiteral() {
+    void fireAndForget_textAndHtml_resolvesWithTextWhenBothSet() {
+        UI ui = new MockUI();
+        TagComponent button = new TagComponent("button");
+        ui.getElement().appendChild(button.getElement());
+
+        new DomEventTrigger(button, "click").triggers(
+                new WriteToClipboardAction(new LiteralInput<>("plain"),
+                        new LiteralInput<>("<b>html</b>")));
+
+        ui.getInternals().getStateTree().runExecutionsBeforeClientResponse();
+
+        // Both slots are packed into one ClipboardItem; .then resolves with
+        // the text value (text/plain wins over text/html for onCopied).
+        assertEquals(
+                "((t,h) => navigator.clipboard.write([new ClipboardItem({\"text/plain\":t,\"text/html\":h})]).then(() => t))(\"plain\",\"<b>html</b>\");",
+                handlerOf(singleInstallFn(ui)).getBody());
+    }
+
+    @Test
+    void fireAndForget_htmlOnly_resolvesWithHtml() {
         UI ui = new MockUI();
         TagComponent button = new TagComponent("button");
         ui.getElement().appendChild(button.getElement());
 
         new DomEventTrigger(button, "click")
-                .triggers(new CopyTextToClipboardAction(
-                        new LiteralInput<>("hello \"world\"\n")));
+                .triggers(new WriteToClipboardAction(null,
+                        new LiteralInput<>("<b>hi</b>")));
 
         ui.getInternals().getStateTree().runExecutionsBeforeClientResponse();
 
-        // The literal is JSON-encoded, so the quotes and newline inside are
-        // escaped — proves callers can't accidentally break out of the
-        // string by passing values that contain quotes or newlines.
+        // Without text, the promise resolves with the html value.
         assertEquals(
-                "((v) => navigator.clipboard.writeText(v).then(() => v))(\"hello \\\"world\\\"\\n\");",
+                "((h) => navigator.clipboard.write([new ClipboardItem({\"text/html\":h})]).then(() => h))(\"<b>hi</b>\");",
                 handlerOf(singleInstallFn(ui)).getBody());
     }
 
     @Test
-    void withCallbacks_handlerCallsObserverWithWriteTextPromise() {
+    void withCallbacks_handlerWrapsWriteInObserveCall() {
         UI ui = new MockUI();
         TagComponent button = new TagComponent("button");
         TagComponent field = new TagComponent("input");
         ui.getElement().appendChild(button.getElement(), field.getElement());
 
         new DomEventTrigger(button, "click")
-                .triggers(new CopyTextToClipboardAction(
-                        new PropertyInput<>(field, "value", String.class),
+                .triggers(new WriteToClipboardAction(
+                        new PropertyInput<>(field, "value", String.class), null,
                         copied -> {
                         }, err -> {
                         }));
 
         ui.getInternals().getStateTree().runExecutionsBeforeClientResponse();
 
-        // $0 = OBSERVE_PROMISE JsFunction, $1 = return channel, $2 = field;
-        // the IIFE binds the text to v so the promise resolves with the
-        // copied value.
+        // $0 = OBSERVE_PROMISE JsFunction, $1 = return channel, $2 = field.
         assertEquals(
-                "$0(((v) => navigator.clipboard.writeText(v).then(() => v))($2[\"value\"]), $1);",
+                "$0(((t) => navigator.clipboard.write([new ClipboardItem({\"text/plain\":t})]).then(() => t))($2[\"value\"]), $1);",
                 handlerOf(singleInstallFn(ui)).getBody());
     }
 
@@ -106,10 +126,10 @@ class CopyTextToClipboardActionTest {
         TagComponent field = new TagComponent("input");
         ui.getElement().appendChild(button.getElement(), field.getElement());
 
-        List<String> copied = new ArrayList<>();
+        List<@Nullable String> copied = new ArrayList<>();
         new DomEventTrigger(button, "click")
-                .triggers(new CopyTextToClipboardAction(
-                        new PropertyInput<>(field, "value", String.class),
+                .triggers(new WriteToClipboardAction(
+                        new PropertyInput<>(field, "value", String.class), null,
                         copied::add, err -> {
                         }));
 
@@ -126,16 +146,16 @@ class CopyTextToClipboardActionTest {
     }
 
     @Test
-    void onCopied_receivesEmptyStringWhenJsResolvedWithoutValue() {
+    void onCopied_receivesNullWhenJsResolvedWithoutValue() {
         UI ui = new MockUI();
         TagComponent button = new TagComponent("button");
         TagComponent field = new TagComponent("input");
         ui.getElement().appendChild(button.getElement(), field.getElement());
 
-        List<String> copied = new ArrayList<>();
+        List<@Nullable String> copied = new ArrayList<>();
         new DomEventTrigger(button, "click")
-                .triggers(new CopyTextToClipboardAction(
-                        new PropertyInput<>(field, "value", String.class),
+                .triggers(new WriteToClipboardAction(
+                        new PropertyInput<>(field, "value", String.class), null,
                         copied::add, err -> {
                         }));
 
@@ -143,12 +163,20 @@ class CopyTextToClipboardActionTest {
 
         ObjectNode outcome = JacksonUtils.createObjectNode();
         outcome.put("ok", true);
-        // No "value" field — defensive: don't blow up, treat as empty.
+        // No "value" field — JS resolved with undefined. The typed Consumer
+        // gets null, honestly reflecting "no value" rather than masking it
+        // as an empty string.
         ArrayNode args = JacksonUtils.createArrayNode();
         args.add(outcome);
         singleReturnChannel(ui).invoke(args);
 
-        assertEquals(List.of(""), copied);
+        assertEquals(Arrays.asList((String) null), copied);
+    }
+
+    @Test
+    void constructor_bothInputsNullRejected() {
+        assertThrows(IllegalArgumentException.class,
+                () -> new WriteToClipboardAction(null, null));
     }
 
     private static ReturnChannelRegistration singleReturnChannel(UI ui) {
